cmake_minimum_required(VERSION 3.20)
project(clpeak)

set(CLPEAK_ROOT "${CMAKE_CURRENT_SOURCE_DIR}")
include(${CLPEAK_ROOT}/src/common/cmake/version.cmake)
include(GNUInstallDirs)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Release")
endif()

# Backend options
option(CLPEAK_ENABLE_OPENCL "Build OpenCL backend" ON)
option(CLPEAK_ENABLE_VULKAN "Build Vulkan backend" ON)
option(CLPEAK_ENABLE_CUDA   "Build CUDA backend"   ON)
option(CLPEAK_ENABLE_METAL  "Build Metal backend"  ON)

# Find Vulkan (needed by src/vulkan/CMakeLists.txt)
if(CLPEAK_ENABLE_VULKAN)
    find_package(Vulkan QUIET)
endif()
# Find CUDA (needed by src/cuda/CMakeLists.txt)
if(CLPEAK_ENABLE_CUDA)
    find_package(CUDAToolkit QUIET)
endif()
# Find Metal frameworks (needed by src/metal/CMakeLists.txt and summary)
if(APPLE AND CLPEAK_ENABLE_METAL)
    find_library(METAL_FRAMEWORK Metal)
    find_library(FOUNDATION_FRAMEWORK Foundation)
    find_library(IOKIT_FRAMEWORK IOKit)
    find_library(MPS_FRAMEWORK MetalPerformanceShaders)
    find_library(MPSGRAPH_FRAMEWORK MetalPerformanceShadersGraph)
endif()

# Always build common
add_subdirectory(src/common)

# Conditionally build backends
add_subdirectory(src/opencl)
add_subdirectory(src/vulkan)
add_subdirectory(src/cuda)
add_subdirectory(src/metal)

# CLI executable
add_subdirectory(src/cli)

# ---- Backend status summary ------------------------------------------------
# Print a single block at the end of configure so the user can see at a
# glance which backends will be built into the resulting clpeak binary.
set(_clpeak_summary "")
if(CLPEAK_ENABLE_OPENCL)
    string(APPEND _clpeak_summary "  OpenCL : ENABLED\n")
else()
    string(APPEND _clpeak_summary "  OpenCL : disabled (CLPEAK_ENABLE_OPENCL=OFF)\n")
endif()
if(CLPEAK_ENABLE_VULKAN AND Vulkan_FOUND)
    string(APPEND _clpeak_summary "  Vulkan : ENABLED  (${Vulkan_VERSION})\n")
elseif(CLPEAK_ENABLE_VULKAN)
    string(APPEND _clpeak_summary "  Vulkan : disabled (Vulkan SDK / loader not found)\n")
else()
    string(APPEND _clpeak_summary "  Vulkan : disabled (CLPEAK_ENABLE_VULKAN=OFF)\n")
endif()
if(CLPEAK_ENABLE_CUDA AND CUDAToolkit_FOUND)
    string(APPEND _clpeak_summary "  CUDA   : ENABLED  (Toolkit ${CUDAToolkit_VERSION})\n")
elseif(CLPEAK_ENABLE_CUDA)
    string(APPEND _clpeak_summary "  CUDA   : disabled (CUDA Toolkit not found)\n")
else()
    string(APPEND _clpeak_summary "  CUDA   : disabled (CLPEAK_ENABLE_CUDA=OFF)\n")
endif()
if(CLPEAK_ENABLE_METAL AND APPLE AND METAL_FRAMEWORK AND FOUNDATION_FRAMEWORK AND MPS_FRAMEWORK AND MPSGRAPH_FRAMEWORK)
    string(APPEND _clpeak_summary "  Metal  : ENABLED  (Apple silicon target, MPSGraph linked)\n")
elseif(CLPEAK_ENABLE_METAL AND APPLE)
    string(APPEND _clpeak_summary "  Metal  : disabled (Metal/Foundation/MPSGraph framework not found)\n")
elseif(CLPEAK_ENABLE_METAL)
    string(APPEND _clpeak_summary "  Metal  : disabled (non-Apple host)\n")
else()
    string(APPEND _clpeak_summary "  Metal  : disabled (CLPEAK_ENABLE_METAL=OFF)\n")
endif()
message(STATUS "")
message(STATUS "===============================================================")
message(STATUS "clpeak backend summary")
message(STATUS "")
# Print the multi-line block.  CMake `message(STATUS "...")` re-prefixes
# every newline so we split manually.
string(REPLACE "\n" ";" _summary_lines "${_clpeak_summary}")
foreach(_line IN LISTS _summary_lines)
    if(NOT "${_line}" STREQUAL "")
        message(STATUS "${_line}")
    endif()
endforeach()
message(STATUS "===============================================================")
message(STATUS "")

install(TARGETS clpeak RUNTIME DESTINATION bin)
install(FILES LICENSE DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/clpeak")
enable_testing()
add_test(clpeak_test_run clpeak)
set(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}-${CLPEAK_VERSION_STR}")
set(CPACK_GENERATOR "ZIP")
include(CPack)
