cmake_minimum_required(VERSION 3.20)
project(clpeak)

set(CLPEAK_ROOT "${CMAKE_CURRENT_SOURCE_DIR}")
include(${CLPEAK_ROOT}/src/common/cmake/version.cmake)
include(GNUInstallDirs)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Release")
endif()

# Backend options
option(CLPEAK_ENABLE_OPENCL "Build OpenCL backend" ON)
option(CLPEAK_ENABLE_VULKAN "Build Vulkan backend" ON)
option(CLPEAK_ENABLE_CUDA   "Build CUDA backend"   ON)
option(CLPEAK_ENABLE_ROCM   "Build ROCm/HIP backend" ON)
option(CLPEAK_ENABLE_METAL  "Build Metal backend"  ON)
option(CLPEAK_ENABLE_ONEAPI "Build oneAPI/SYCL backend (requires icpx or clang++ -fsycl)" ON)

# Find Vulkan (needed by src/vulkan/CMakeLists.txt)
if(CLPEAK_ENABLE_VULKAN)
    find_package(Vulkan QUIET)
endif()
# Find CUDA (needed by src/cuda/CMakeLists.txt)
if(CLPEAK_ENABLE_CUDA)
    find_package(CUDAToolkit QUIET)
endif()
# Find ROCm/HIP (needed by src/rocm/CMakeLists.txt)
if(CLPEAK_ENABLE_ROCM)
    list(APPEND CMAKE_PREFIX_PATH /opt/rocm/hip /opt/rocm)
    find_package(hip QUIET CONFIG)
    find_package(hiprtc QUIET CONFIG)
    find_package(rocblas QUIET CONFIG)

    set(CLPEAK_HIPRTC_LINK "")
    if(TARGET hiprtc::hiprtc)
        set(CLPEAK_HIPRTC_LINK hiprtc::hiprtc)
    elseif(TARGET hiprtc)
        set(CLPEAK_HIPRTC_LINK hiprtc)
    elseif(TARGET hip::hiprtc)
        set(CLPEAK_HIPRTC_LINK hip::hiprtc)
    else()
        find_library(CLPEAK_HIPRTC_LIBRARY NAMES hiprtc
            HINTS /opt/rocm/lib /opt/rocm/lib64)
        if(CLPEAK_HIPRTC_LIBRARY)
            set(CLPEAK_HIPRTC_LINK "${CLPEAK_HIPRTC_LIBRARY}")
        endif()
    endif()

    if(NOT "${CLPEAK_HIPRTC_LINK}" STREQUAL "")
        set(CLPEAK_HIPRTC_FOUND TRUE)
    else()
        set(CLPEAK_HIPRTC_FOUND FALSE)
    endif()

    find_path(CLPEAK_ROCWMMA_INCLUDE_DIR
        NAMES rocwmma/rocwmma.hpp
        HINTS /opt/rocm/include)
    if(CLPEAK_ROCWMMA_INCLUDE_DIR)
        set(CLPEAK_ROCWMMA_FOUND TRUE)
    else()
        set(CLPEAK_ROCWMMA_FOUND FALSE)
    endif()
endif()
# Find Metal frameworks (needed by src/metal/CMakeLists.txt and summary)
if(APPLE AND CLPEAK_ENABLE_METAL)
    find_library(METAL_FRAMEWORK Metal)
    find_library(FOUNDATION_FRAMEWORK Foundation)
    find_library(IOKIT_FRAMEWORK IOKit)
    find_library(MPS_FRAMEWORK MetalPerformanceShaders)
    find_library(MPSGRAPH_FRAMEWORK MetalPerformanceShadersGraph)
endif()
# Find Intel oneAPI / SYCL (needed by src/oneapi/CMakeLists.txt)
if(CLPEAK_ENABLE_ONEAPI)
    # IntelSYCL ships with the Intel oneAPI Base Toolkit.  When compiling with
    # icpx (or clang++ -fsycl), it exposes add_sycl_to_target() and the
    # IntelSYCL::SYCL_CXX imported target.
    find_package(IntelSYCL CONFIG QUIET)
    # Optional vendor libraries.  MKL_SYCL is the SYCL-enabled BLAS subset of
    # oneMKL; only present when the user installed the MKL component.
    find_package(MKL CONFIG QUIET)
endif()

# Always build common
add_subdirectory(src/common)

# Conditionally build backends
add_subdirectory(src/opencl)
add_subdirectory(src/vulkan)
add_subdirectory(src/cuda)
add_subdirectory(src/rocm)
add_subdirectory(src/metal)
add_subdirectory(src/oneapi)

# CLI executable
add_subdirectory(src/cli)

# ---- Backend status summary ------------------------------------------------
# Print a single block at the end of configure so the user can see at a
# glance which backends will be built into the resulting clpeak binary.
set(_clpeak_summary "")
if(CLPEAK_ENABLE_OPENCL)
    string(APPEND _clpeak_summary "  OpenCL : ENABLED\n")
else()
    string(APPEND _clpeak_summary "  OpenCL : disabled (CLPEAK_ENABLE_OPENCL=OFF)\n")
endif()
if(CLPEAK_ENABLE_VULKAN AND Vulkan_FOUND)
    string(APPEND _clpeak_summary "  Vulkan : ENABLED  (${Vulkan_VERSION})\n")
elseif(CLPEAK_ENABLE_VULKAN)
    string(APPEND _clpeak_summary "  Vulkan : disabled (Vulkan SDK / loader not found)\n")
else()
    string(APPEND _clpeak_summary "  Vulkan : disabled (CLPEAK_ENABLE_VULKAN=OFF)\n")
endif()
if(CLPEAK_ENABLE_CUDA AND CUDAToolkit_FOUND)
    string(APPEND _clpeak_summary "  CUDA   : ENABLED  (Toolkit ${CUDAToolkit_VERSION})\n")
elseif(CLPEAK_ENABLE_CUDA)
    string(APPEND _clpeak_summary "  CUDA   : disabled (CUDA Toolkit not found)\n")
else()
    string(APPEND _clpeak_summary "  CUDA   : disabled (CLPEAK_ENABLE_CUDA=OFF)\n")
endif()
if(CLPEAK_ENABLE_ROCM AND hip_FOUND AND CLPEAK_HIPRTC_FOUND)
    set(_clpeak_rocm_features "HIP")
    if(rocblas_FOUND AND TARGET roc::rocblas)
        string(APPEND _clpeak_rocm_features ", rocBLAS")
    endif()
    if(CLPEAK_ROCWMMA_FOUND)
        string(APPEND _clpeak_rocm_features ", rocWMMA")
    endif()
    string(APPEND _clpeak_summary "  ROCm   : ENABLED  (${_clpeak_rocm_features})\n")
elseif(CLPEAK_ENABLE_ROCM AND NOT hip_FOUND)
    string(APPEND _clpeak_summary "  ROCm   : disabled (ROCm/HIP package not found)\n")
elseif(CLPEAK_ENABLE_ROCM)
    string(APPEND _clpeak_summary "  ROCm   : disabled (HIPRTC library not found)\n")
else()
    string(APPEND _clpeak_summary "  ROCm   : disabled (CLPEAK_ENABLE_ROCM=OFF)\n")
endif()
if(CLPEAK_ENABLE_METAL AND APPLE AND METAL_FRAMEWORK AND FOUNDATION_FRAMEWORK AND MPS_FRAMEWORK AND MPSGRAPH_FRAMEWORK)
    string(APPEND _clpeak_summary "  Metal  : ENABLED  (Apple silicon target, MPSGraph linked)\n")
elseif(CLPEAK_ENABLE_METAL AND APPLE)
    string(APPEND _clpeak_summary "  Metal  : disabled (Metal/Foundation/MPSGraph framework not found)\n")
elseif(CLPEAK_ENABLE_METAL)
    string(APPEND _clpeak_summary "  Metal  : disabled (non-Apple host)\n")
else()
    string(APPEND _clpeak_summary "  Metal  : disabled (CLPEAK_ENABLE_METAL=OFF)\n")
endif()
if(CLPEAK_ENABLE_ONEAPI AND IntelSYCL_FOUND)
    set(_clpeak_oneapi_features "SYCL")
    if(MKL_FOUND)
        string(APPEND _clpeak_oneapi_features ", oneMKL")
    endif()
    if(CLPEAK_ONEAPI_HAS_JOINT_MATRIX)
        string(APPEND _clpeak_oneapi_features ", joint_matrix")
    endif()
    string(APPEND _clpeak_summary "  oneAPI : ENABLED  (${_clpeak_oneapi_features})\n")
elseif(CLPEAK_ENABLE_ONEAPI)
    string(APPEND _clpeak_summary "  oneAPI : disabled (IntelSYCL not found - use icpx / clang++ -fsycl)\n")
else()
    string(APPEND _clpeak_summary "  oneAPI : disabled (CLPEAK_ENABLE_ONEAPI=OFF)\n")
endif()
message(STATUS "")
message(STATUS "===============================================================")
message(STATUS "clpeak backend summary")
message(STATUS "")
# Print the multi-line block.  CMake `message(STATUS "...")` re-prefixes
# every newline so we split manually.
string(REPLACE "\n" ";" _summary_lines "${_clpeak_summary}")
foreach(_line IN LISTS _summary_lines)
    if(NOT "${_line}" STREQUAL "")
        message(STATUS "${_line}")
    endif()
endforeach()
message(STATUS "===============================================================")
message(STATUS "")

install(TARGETS clpeak RUNTIME DESTINATION bin)
install(FILES LICENSE DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/clpeak")
enable_testing()
add_test(clpeak_test_run clpeak)
set(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}-${CLPEAK_VERSION_STR}")
set(CPACK_GENERATOR "ZIP")
include(CPack)
